# geometry-dash-lunar-u2

./: CMakeLists.txt  README.md  about.md  changelog.md  mod.json
.github/workflows/: multi-platform.yml
include/lunar/hooks/: HookedAchievementManager.h  HookedGManager.h  HookedGameLevelManager.h  HookedGameManager.h  HookedGameStatsManager.h  HookedItemInfoPopup.h  HookedLevelPage.h  HookedLevelSelectLayer.h  HookedLevelTools.h  HookedLoadingLayer.h  HookedLocalLevelManager.h  HookedMenuLayer.h  HookedMusicDownloadManager.h  HookedSimplePlayer.h
include/lunar/layers/: CreditsLayer.h  VaultLayer.h
include/lunar/nodes/: CreditNode.h  LevelNode.h  SavePopup.h
include/lunar/utils/: patch.hpp
resources/icons/robot_02/: robot_02.plist
resources/icons/update1/: IconSheet-hd.plist
resources/icons/update2/: IconSheet-hd.plist
resources/icons/update2/old/: IconSheet-uhd.plist  IconSheet.plist
resources/icons/update2/robot_03/: robot_03-hd.plist  robot_03-uhd.plist
resources/levels/: 1.txt  10.txt  5.txt  6.txt  7.txt  level-10.txt  level-2.txt  level-3.txt  level-4.txt  level-6.txt  level-6001.txt  level-7.txt  level-8.txt  level-9.txt
resources/levels/gmd files/: Active.gmd  Space Battle.gmd
rsc/icons/update1/: IconSheet-uhd.plist  IconSheet.plist
rsc/icons/update2/: IconSheetGenerated-hd.plist  IconSheetGenerated-uhd.plist  IconSheetGenerated.plist
rsc/icons/update2/robot_02/: robot_02-hd.plist  robot_02-uhd.plist
rsc/icons/update2/robot_03/: robot_03.plist
rsc/levels/: level-5.txt  level-6.txt  level-7.txt
rsc/levels/gmd files/: Earthsplitter.gmd  ThunderZone.gmd  lol glove pwoer wefk.gmd
rsc/particles/: crystalEffect.plist
src/: main.cpp
src/defs/: all.h  utils.h
src/hooks/: HookedAchievementManager.cpp  HookedGManager.cpp  HookedGameLevelManager.cpp  HookedGameManager.cpp  HookedGameStatsManager.cpp  HookedItemInfoPopup.cpp  HookedLevelPage.cpp  HookedLevelSelectLayer.cpp  HookedLevelTools.cpp  HookedLoadingLayer.cpp  HookedLocalLevelManager.cpp  HookedMenuLayer.cpp  HookedMusicDownloadManager.cpp  HookedSimplePlayer.cpp
src/hooks/headers/: HookedAchievementManager.h  HookedGManager.h  HookedGameLevelManager.h  HookedGameManager.h  HookedGameStatsManager.h  HookedItemInfoPopup.h  HookedLevelPage.h  HookedLevelSelectLayer.h  HookedLevelTools.h  HookedLoadingLayer.h  HookedLocalLevelManager.h  HookedMenuLayer.h  HookedMusicDownloadManager.h  HookedSimplePlayer.h
src/hooks/src/: HookedAchievementManager.cpp  HookedGManager.cpp  HookedGameLevelManager.cpp  HookedGameManager.cpp  HookedGameStatsManager.cpp  HookedItemInfoPopup.cpp  HookedLevelPage.cpp  HookedLevelSelectLayer.cpp  HookedLevelTools.cpp  HookedLoadingLayer.cpp  HookedLocalLevelManager.cpp  HookedMenuLayer.cpp  HookedMusicDownloadManager.cpp  HookedSimplePlayer.cpp
src/layers/: CreditsLayer.cpp  VaultLayer.cpp
src/layers/headers/: CreditsLayer.h  VaultLayer.h
src/layers/src/: CreditsLayer.cpp  VaultLayer.cpp
src/nodes/: CreditNode.cpp  LevelNode.cpp  SavePopup.cpp
src/nodes/headers/: CreditNode.h  LevelNode.h  SavePopup.h
src/nodes/src/: CreditNode.cpp  LevelNode.cpp  SavePopup.cpp
src/utils/: WorkingDialogObject.h  patch.hpp
